--- a/tutorial/html/measures/index.html
+++ b/tutorial/html/measures/index.html
@@ -249,7 +249,7 @@ multi-class problems. If not, the measure can only be used for binary classifica
 <table>
 <thead>
 <tr>
-<th align="left">Measure</th>
+<th align="left">ID</th>
 <th align="center">Minim.</th>
 <th align="right">Best</th>
 <th align="right">Worst</th>
@@ -520,7 +520,7 @@ multi-class problems. If not, the measure can only be used for binary classifica
 <table>
 <thead>
 <tr>
-<th align="left">Measure</th>
+<th align="left">ID</th>
 <th align="center">Minim.</th>
 <th align="right">Best</th>
 <th align="right">Worst</th>
@@ -615,7 +615,7 @@ multi-class problems. If not, the measure can only be used for binary classifica
 <table>
 <thead>
 <tr>
-<th align="left">Measure</th>
+<th align="left">ID</th>
 <th align="center">Minim.</th>
 <th align="right">Best</th>
 <th align="right">Worst</th>
@@ -644,7 +644,7 @@ multi-class problems. If not, the measure can only be used for binary classifica
 <table>
 <thead>
 <tr>
-<th align="left">Measure</th>
+<th align="left">ID</th>
 <th align="center">Minim.</th>
 <th align="right">Best</th>
 <th align="right">Worst</th>
@@ -717,7 +717,7 @@ multi-class problems. If not, the measure can only be used for binary classifica
 <table>
 <thead>
 <tr>
-<th align="left">Measure</th>
+<th align="left">ID</th>
 <th align="center">Minim.</th>
 <th align="right">Best</th>
 <th align="right">Worst</th>
@@ -757,7 +757,7 @@ multi-class problems. If not, the measure can only be used for binary classifica
 <table>
 <thead>
 <tr>
-<th align="left">Measure</th>
+<th align="left">ID</th>
 <th align="center">Minim.</th>
 <th align="right">Best</th>
 <th align="right">Worst</th>
