--- a/tutorial/html/task/index.html
+++ b/tutorial/html/task/index.html
@@ -567,39 +567,39 @@ These are used throughout this tutorial in order to get shorter and more readabl
 </thead>
 <tbody>
 <tr>
-<td align="left">agri.task (mlr.agri)</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/mlr.agri/">agri.task</a></td>
 <td align="left">European Union Agricultural Workforces clustering task</td>
 </tr>
 <tr>
-<td align="left">bc.task (mlr.bc)</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/mlr.bc/">bc.task</a></td>
 <td align="left">Wisconsin Breast Cancer classification task</td>
 </tr>
 <tr>
-<td align="left">bh.task (mlr.bh)</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/mlr.bh/">bh.task</a></td>
 <td align="left">Boston Housing regression task</td>
 </tr>
 <tr>
-<td align="left">costIris.task (mlr.costIris)</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/mlr.costIris/">costIris.task</a></td>
 <td align="left">Iris cost-sensitive classification task</td>
 </tr>
 <tr>
-<td align="left">iris.task (mlr.iris)</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/mlr.iris/">iris.task</a></td>
 <td align="left">Iris classification task</td>
 </tr>
 <tr>
-<td align="left">lung.task (mlr.lung)</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/mlr.lung/">lung.task</a></td>
 <td align="left">NCCTG Lung Cancer survival task</td>
 </tr>
 <tr>
-<td align="left">mtcars.task (mlr.mtcars)</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/mlr.mtcars/">mtcars.task</a></td>
 <td align="left">Motor Trend Car Road Tests clustering task</td>
 </tr>
 <tr>
-<td align="left">sonar.task (mlr.sonar)</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/mlr.sonar/">sonar.task</a></td>
 <td align="left">Sonar classification task</td>
 </tr>
 <tr>
-<td align="left">wpbc.task (mlr.wpbc)</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/mlr.wpbc/">wpbc.task</a></td>
 <td align="left">Wisonsin Prognostic Breast Cancer (WPBC) survival task</td>
 </tr>
 </tbody>
