--- a/tutorial/html/benchmark_experiments/index.html
+++ b/tutorial/html/benchmark_experiments/index.html
@@ -236,33 +236,23 @@ strategy for each <a href="http://www.rdocumentation.org/packages/mlr/functions/
 <h3 id="example-two-tasks-and-two-learners">Example: Two tasks and two learners</h3>
 <pre class="prettyprint well"><code class="r">## Two learners to be compared
 lrns = list(makeLearner(&quot;classif.lda&quot;), makeLearner(&quot;classif.rpart&quot;))
-</code></pre>
 
-<pre class="prettyprint well"><code>## Loading required package: MASS
-## Loading required package: rpart
-</code></pre>
-
-<pre class="prettyprint well"><code class="r">## Two classification tasks
+## Two classification tasks
 tasks = list(iris.task, bc.task)
-</code></pre>
 
-<pre class="prettyprint well"><code>## Error: object 'bc.task' not found
-</code></pre>
-
-<pre class="prettyprint well"><code class="r">## Use 5-fold cross-validation for both tasks
+## Use 5-fold cross-validation for both tasks
 rdesc = makeResampleDesc(&quot;CV&quot;, iters = 5)
 
 ## Conduct the benchmark experiment
 res = benchmark(lrns, tasks, rdesc, show.info = FALSE)
+res
 </code></pre>
 
-<pre class="prettyprint well"><code>## Error: object 'tasks' not found
-</code></pre>
-
-<pre class="prettyprint well"><code class="r">res
-</code></pre>
-
-<pre class="prettyprint well"><code>## Error: object 'res' not found
+<pre class="prettyprint well"><code>##                   task       learner mmce.test.mean
+## 1 BreastCancer-example   classif.lda        0.04243
+## 2 BreastCancer-example classif.rpart        0.05706
+## 3         iris-example   classif.lda        0.04000
+## 4         iris-example classif.rpart        0.06667
 </code></pre>
 
 <p>The above code should be self-explanatory. In the result every row corresponds to one <a href="http://www.rdocumentation.org/packages/mlr/functions/Task.html">Task</a>
@@ -277,33 +267,52 @@ Let's have a look at the benchmark result from the example above:</p>
 getPerformances(res)
 </code></pre>
 
-<pre class="prettyprint well"><code>## Error: object 'res' not found
+<pre class="prettyprint well"><code>## $`BreastCancer-example`
+##   iter classif.lda.mmce classif.rpart.mmce
+## 1    1          0.02206            0.04412
+## 2    2          0.04412            0.04412
+## 3    3          0.04380            0.08029
+## 4    4          0.07299            0.07299
+## 5    5          0.02920            0.04380
+## 
+## $`iris-example`
+##   iter classif.lda.mmce classif.rpart.mmce
+## 1    1          0.03333            0.06667
+## 2    2          0.00000            0.06667
+## 3    3          0.00000            0.00000
+## 4    4          0.00000            0.03333
+## 5    5          0.16667            0.16667
 </code></pre>
 
 <pre class="prettyprint well"><code class="r">## Aggregated performances
 getAggrPerformances(res)
 </code></pre>
 
-<pre class="prettyprint well"><code>## Error: object 'res' not found
+<pre class="prettyprint well"><code>##                   task       learner mmce.test.mean
+## 1 BreastCancer-example   classif.lda        0.04243
+## 2 BreastCancer-example classif.rpart        0.05706
+## 3         iris-example   classif.lda        0.04000
+## 4         iris-example classif.rpart        0.06667
 </code></pre>
 
 <pre class="prettyprint well"><code class="r">## Predictions
 pred = getPredictions(res)
+names(pred)
 </code></pre>
 
-<pre class="prettyprint well"><code>## Error: object 'res' not found
-</code></pre>
-
-<pre class="prettyprint well"><code class="r">names(pred)
-</code></pre>
-
-<pre class="prettyprint well"><code>## Error: object 'pred' not found
+<pre class="prettyprint well"><code>## [1] &quot;BreastCancer-example&quot; &quot;iris-example&quot;
 </code></pre>
 
 <pre class="prettyprint well"><code class="r">head(pred$`iris-example`)
 </code></pre>
 
-<pre class="prettyprint well"><code>## Error: object 'pred' not found
+<pre class="prettyprint well"><code>##    id  truth iter  set response.classif.lda response.classif.rpart
+## 3   3 setosa    1 test               setosa                 setosa
+## 7   7 setosa    1 test               setosa                 setosa
+## 10 10 setosa    1 test               setosa                 setosa
+## 13 13 setosa    1 test               setosa                 setosa
+## 22 22 setosa    1 test               setosa                 setosa
+## 36 36 setosa    1 test               setosa                 setosa
 </code></pre>
 
 <p>Note that the task IDs are used to name the elements of <code>pred</code>.</p>
@@ -347,18 +356,8 @@ in.rdesc = makeResampleDesc(&quot;CV&quot;, iters = 3)
 ## Tune k-nearest neighbor
 lrn = makeTuneWrapper(&quot;classif.kknn&quot;, resampling = in.rdesc, par.set = ps, control = ctrl,
     show.info = FALSE)
-</code></pre>
 
-<pre class="prettyprint well"><code>## Loading required package: kknn
-## 
-## Attaching package: 'kknn'
-## 
-## The following object is masked from 'package:caret':
-## 
-##     contr.dummy
-</code></pre>
-
-<pre class="prettyprint well"><code class="r">## Define &quot;outer&quot; bootstrap indices
+## Define &quot;outer&quot; bootstrap indices
 out.rdesc = makeResampleDesc(&quot;Bootstrap&quot;, iters = 5)
 
 ## Merge it into a benchmark experiment
@@ -368,7 +367,7 @@ res
 </code></pre>
 
 <pre class="prettyprint well"><code>##           task            learner acc.test.mean
-## 1 iris-example classif.kknn.tuned        0.9453
+## 1 iris-example classif.kknn.tuned        0.9342
 </code></pre>
 
 <pre class="prettyprint well"><code class="r">## What parameter setting achieved this performances?
@@ -379,28 +378,28 @@ getTuneResult(res)
 ## $`iris-example`$classif.kknn.tuned
 ## $`iris-example`$classif.kknn.tuned[[1]]
 ## Tune result:
-## Op. pars: k=3
-## mmce.test.mean=0.0133
+## Op. pars: k=5
+## mmce.test.mean=0.0267
 ## 
 ## $`iris-example`$classif.kknn.tuned[[2]]
 ## Tune result:
-## Op. pars: k=2
-## mmce.test.mean=0.0267
+## Op. pars: k=4
+## mmce.test.mean=0.04
 ## 
 ## $`iris-example`$classif.kknn.tuned[[3]]
 ## Tune result:
-## Op. pars: k=1
-## mmce.test.mean=0.02
+## Op. pars: k=5
+## mmce.test.mean=0.00667
 ## 
 ## $`iris-example`$classif.kknn.tuned[[4]]
 ## Tune result:
 ## Op. pars: k=3
-## mmce.test.mean=0.06
+## mmce.test.mean=0.0267
 ## 
 ## $`iris-example`$classif.kknn.tuned[[5]]
 ## Tune result:
-## Op. pars: k=5
-## mmce.test.mean=0.0267
+## Op. pars: k=2
+## mmce.test.mean=0.02
 </code></pre>
 
 <pre class="prettyprint well"><code class="r">## What performances did we get in the single runs?
@@ -409,11 +408,11 @@ getPerformances(res)
 
 <pre class="prettyprint well"><code>## $`iris-example`
 ##   iter classif.kknn.tuned.acc
-## 1    1                 0.9245
-## 2    2                 0.9434
-## 3    3                 0.9464
-## 4    4                 0.9464
-## 5    5                 0.9655
+## 1    1                 0.9623
+## 2    2                 0.9245
+## 3    3                 0.9200
+## 4    4                 0.9286
+## 5    5                 0.9355
 </code></pre>
 
 <p>Of course everything works the same way if we change the resampling
@@ -423,12 +422,8 @@ strategy either in the outer or inner run. They can be mixed as desired.</p>
 sets, three <a href="http://www.rdocumentation.org/packages/mlr/functions/makeLearner.html">Learners</a> and <a href="../tune/">tuning</a>.</p>
 <pre class="prettyprint well"><code class="r">## List of learning tasks
 tasks = list(iris.task, bc.task)
-</code></pre>
 
-<pre class="prettyprint well"><code>## Error: object 'bc.task' not found
-</code></pre>
-
-<pre class="prettyprint well"><code class="r">## Very small grid for SVM hyperparameters
+## Very small grid for SVM hyperparameters
 ps = makeParamSet(makeDiscreteParam(&quot;C&quot;, 2^seq(-1,1)),
     makeDiscreteParam(&quot;sigma&quot;, 2^seq(-1,1)))
 ctrl = makeTuneControlGrid()
@@ -439,12 +434,8 @@ in.rdesc = makeResampleDesc(&quot;CV&quot;, iters = 3)
 ## Tune a SVM
 lrn = makeTuneWrapper(&quot;classif.ksvm&quot;, resampling = in.rdesc, par.set = ps, control = ctrl,
     show.info = FALSE)
-</code></pre>
 
-<pre class="prettyprint well"><code>## Loading required package: kernlab
-</code></pre>
-
-<pre class="prettyprint well"><code class="r">## Three learners to be compared
+## Three learners to be compared
 lrns = list(makeLearner(&quot;classif.lda&quot;), makeLearner(&quot;classif.rpart&quot;), lrn)
 
 ## Define &quot;outer&quot; cross-validation indices
@@ -452,61 +443,110 @@ out.rdesc = makeResampleDesc(&quot;CV&quot;, iters = 5)
 
 ## Merge it to a benchmark experiment
 res = benchmark(lrns, tasks, out.rdesc, show.info = FALSE)
+res
 </code></pre>
 
-<pre class="prettyprint well"><code>## Error: object 'tasks' not found
-</code></pre>
-
-<pre class="prettyprint well"><code class="r">res
-</code></pre>
-
-<pre class="prettyprint well"><code>##           task            learner acc.test.mean
-## 1 iris-example classif.kknn.tuned        0.9453
+<pre class="prettyprint well"><code>##                   task            learner mmce.test.mean
+## 1 BreastCancer-example        classif.lda        0.03664
+## 2 BreastCancer-example      classif.rpart        0.06147
+## 3 BreastCancer-example classif.ksvm.tuned        0.04837
+## 4         iris-example        classif.lda        0.02000
+## 5         iris-example      classif.rpart        0.07333
+## 6         iris-example classif.ksvm.tuned        0.06000
 </code></pre>
 
 <pre class="prettyprint well"><code class="r">## Performance values in individual runs
 getPerformances(res)
 </code></pre>
 
-<pre class="prettyprint well"><code>## $`iris-example`
-##   iter classif.kknn.tuned.acc
-## 1    1                 0.9245
-## 2    2                 0.9434
-## 3    3                 0.9464
-## 4    4                 0.9464
-## 5    5                 0.9655
+<pre class="prettyprint well"><code>## $`BreastCancer-example`
+##   iter classif.lda.mmce classif.rpart.mmce classif.ksvm.tuned.mmce
+## 1    1          0.06618            0.07353                 0.10294
+## 2    2          0.02941            0.03676                 0.02941
+## 3    3          0.02190            0.05839                 0.02190
+## 4    4          0.02920            0.09489                 0.05839
+## 5    5          0.03650            0.04380                 0.02920
+## 
+## $`iris-example`
+##   iter classif.lda.mmce classif.rpart.mmce classif.ksvm.tuned.mmce
+## 1    1          0.00000            0.03333                 0.03333
+## 2    2          0.00000            0.03333                 0.03333
+## 3    3          0.00000            0.10000                 0.03333
+## 4    4          0.06667            0.06667                 0.06667
+## 5    5          0.03333            0.13333                 0.13333
 </code></pre>
 
 <pre class="prettyprint well"><code class="r">## Tuned parameter for SVM
 getTuneResult(res)
 </code></pre>
 
-<pre class="prettyprint well"><code>## $`iris-example`
-## $`iris-example`$classif.kknn.tuned
-## $`iris-example`$classif.kknn.tuned[[1]]
-## Tune result:
-## Op. pars: k=3
-## mmce.test.mean=0.0133
+<pre class="prettyprint well"><code>## $`BreastCancer-example`
+## $`BreastCancer-example`$classif.lda
+## NULL
 ## 
-## $`iris-example`$classif.kknn.tuned[[2]]
-## Tune result:
-## Op. pars: k=2
-## mmce.test.mean=0.0267
+## $`BreastCancer-example`$classif.rpart
+## NULL
 ## 
-## $`iris-example`$classif.kknn.tuned[[3]]
+## $`BreastCancer-example`$classif.ksvm.tuned
+## $`BreastCancer-example`$classif.ksvm.tuned[[1]]
 ## Tune result:
-## Op. pars: k=1
-## mmce.test.mean=0.02
+## Op. pars: C=2; sigma=0.5
+## mmce.test.mean=0.0475
 ## 
-## $`iris-example`$classif.kknn.tuned[[4]]
+## $`BreastCancer-example`$classif.ksvm.tuned[[2]]
 ## Tune result:
-## Op. pars: k=3
-## mmce.test.mean=0.06
+## Op. pars: C=2; sigma=0.5
+## mmce.test.mean=0.0622
 ## 
-## $`iris-example`$classif.kknn.tuned[[5]]
+## $`BreastCancer-example`$classif.ksvm.tuned[[3]]
 ## Tune result:
-## Op. pars: k=5
-## mmce.test.mean=0.0267
+## Op. pars: C=2; sigma=0.5
+## mmce.test.mean=0.0586
+## 
+## $`BreastCancer-example`$classif.ksvm.tuned[[4]]
+## Tune result:
+## Op. pars: C=2; sigma=0.5
+## mmce.test.mean=0.0495
+## 
+## $`BreastCancer-example`$classif.ksvm.tuned[[5]]
+## Tune result:
+## Op. pars: C=2; sigma=0.5
+## mmce.test.mean=0.0513
+## 
+## 
+## 
+## $`iris-example`
+## $`iris-example`$classif.lda
+## NULL
+## 
+## $`iris-example`$classif.rpart
+## NULL
+## 
+## $`iris-example`$classif.ksvm.tuned
+## $`iris-example`$classif.ksvm.tuned[[1]]
+## Tune result:
+## Op. pars: C=2; sigma=0.5
+## mmce.test.mean=0.0333
+## 
+## $`iris-example`$classif.ksvm.tuned[[2]]
+## Tune result:
+## Op. pars: C=0.5; sigma=0.5
+## mmce.test.mean=0.0417
+## 
+## $`iris-example`$classif.ksvm.tuned[[3]]
+## Tune result:
+## Op. pars: C=2; sigma=0.5
+## mmce.test.mean=0.0583
+## 
+## $`iris-example`$classif.ksvm.tuned[[4]]
+## Tune result:
+## Op. pars: C=2; sigma=1
+## mmce.test.mean=0.025
+## 
+## $`iris-example`$classif.ksvm.tuned[[5]]
+## Tune result:
+## Op. pars: C=1; sigma=1
+## mmce.test.mean=0.025
 </code></pre>
 
 <h3 id="example-3-one-task-two-learners-feature-selection">Example 3: One task, two learners, feature selection</h3>
@@ -535,50 +575,47 @@ res = benchmark(tasks = iris.task, learners = lrns, resampling = out.rdesc, show
 <pre class="prettyprint well"><code>## [FeatSel] Started selecting features for learner 'classif.lda'
 ## With control class: FeatSelControlSequential
 ## Imputation value: 1
-## [FeatSel] 1: 0 bits: mmce.test.mean=0.68
-## [FeatSel] 2: 1 bits: mmce.test.mean=0.31
-## [FeatSel] 2: 1 bits: mmce.test.mean=0.42
-## [FeatSel] 2: 1 bits: mmce.test.mean=0.05
-## [FeatSel] 2: 1 bits: mmce.test.mean=0.06
-## [FeatSel] 3: 2 bits: mmce.test.mean=0.05
-## [FeatSel] 3: 2 bits: mmce.test.mean=0.06
-## [FeatSel] 3: 2 bits: mmce.test.mean=0.07
-## [FeatSel] Result: 1 bits : mmce.test.mean=0.05
-## [FeatSel] Started selecting features for learner 'classif.lda'
-## With control class: FeatSelControlSequential
-## Imputation value: 1
-## [FeatSel] 1: 0 bits: mmce.test.mean=0.74
-## [FeatSel] 2: 1 bits: mmce.test.mean=0.39
-## [FeatSel] 2: 1 bits: mmce.test.mean=0.56
-## [FeatSel] 2: 1 bits: mmce.test.mean=0.07
-## [FeatSel] 2: 1 bits: mmce.test.mean=0.05
-## [FeatSel] 3: 2 bits: mmce.test.mean=0.04
-## [FeatSel] 3: 2 bits: mmce.test.mean=0.05
-## [FeatSel] 3: 2 bits: mmce.test.mean=0.05
-## [FeatSel] 4: 3 bits: mmce.test.mean=0.05
-## [FeatSel] 4: 3 bits: mmce.test.mean=0.03
-## [FeatSel] 5: 4 bits: mmce.test.mean=0.03
-## [FeatSel] Result: 3 bits : mmce.test.mean=0.03
-## [FeatSel] Started selecting features for learner 'classif.lda'
-## With control class: FeatSelControlSequential
-## Imputation value: 1
 ## [FeatSel] 1: 0 bits: mmce.test.mean= 0.7
-## [FeatSel] 2: 1 bits: mmce.test.mean=0.33
-## [FeatSel] 2: 1 bits: mmce.test.mean=0.43
-## [FeatSel] 2: 1 bits: mmce.test.mean=0.03
-## [FeatSel] 2: 1 bits: mmce.test.mean=0.05
-## [FeatSel] 3: 2 bits: mmce.test.mean=0.04
+## [FeatSel] 2: 1 bits: mmce.test.mean=0.32
+## [FeatSel] 2: 1 bits: mmce.test.mean=0.54
+## [FeatSel] 2: 1 bits: mmce.test.mean=0.06
+## [FeatSel] 2: 1 bits: mmce.test.mean=0.02
 ## [FeatSel] 3: 2 bits: mmce.test.mean=0.03
+## [FeatSel] 3: 2 bits: mmce.test.mean=0.01
+## [FeatSel] 3: 2 bits: mmce.test.mean=0.05
+## [FeatSel] Result: 1 bits : mmce.test.mean=0.02
+## [FeatSel] Started selecting features for learner 'classif.lda'
+## With control class: FeatSelControlSequential
+## Imputation value: 1
+## [FeatSel] 1: 0 bits: mmce.test.mean=0.73
+## [FeatSel] 2: 1 bits: mmce.test.mean=0.29
+## [FeatSel] 2: 1 bits: mmce.test.mean=0.46
+## [FeatSel] 2: 1 bits: mmce.test.mean=0.05
+## [FeatSel] 2: 1 bits: mmce.test.mean=0.04
+## [FeatSel] 3: 2 bits: mmce.test.mean=0.05
+## [FeatSel] 3: 2 bits: mmce.test.mean=0.05
 ## [FeatSel] 3: 2 bits: mmce.test.mean=0.04
-## [FeatSel] Result: 1 bits : mmce.test.mean=0.03
+## [FeatSel] Result: 1 bits : mmce.test.mean=0.04
+## [FeatSel] Started selecting features for learner 'classif.lda'
+## With control class: FeatSelControlSequential
+## Imputation value: 1
+## [FeatSel] 1: 0 bits: mmce.test.mean=0.65
+## [FeatSel] 2: 1 bits: mmce.test.mean=0.25
+## [FeatSel] 2: 1 bits: mmce.test.mean=0.47
+## [FeatSel] 2: 1 bits: mmce.test.mean=0.05
+## [FeatSel] 2: 1 bits: mmce.test.mean=0.01
+## [FeatSel] 3: 2 bits: mmce.test.mean=0.01
+## [FeatSel] 3: 2 bits: mmce.test.mean=0.01
+## [FeatSel] 3: 2 bits: mmce.test.mean=0.02
+## [FeatSel] Result: 1 bits : mmce.test.mean=0.01
 </code></pre>
 
 <pre class="prettyprint well"><code class="r">res
 </code></pre>
 
 <pre class="prettyprint well"><code>##           task             learner mmce.test.mean
-## 1 iris-example       classif.rpart        0.05333
-## 2 iris-example classif.lda.featsel        0.08000
+## 1 iris-example       classif.rpart        0.06667
+## 2 iris-example classif.lda.featsel        0.06667
 </code></pre>
 
 <pre class="prettyprint well"><code class="r">## Which features have been selected (in the outer resampling steps)?
@@ -592,18 +629,18 @@ getFeatSelResult(res)
 ## $`iris-example`$classif.lda.featsel
 ## $`iris-example`$classif.lda.featsel[[1]]
 ## FeatSel result:
-## Features (1): Petal.Length
-## mmce.test.mean=0.05
+## Features (1): Petal.Width
+## mmce.test.mean=0.02
 ## 
 ## $`iris-example`$classif.lda.featsel[[2]]
 ## FeatSel result:
-## Features (3): Sepal.Length, Petal.Length, Petal.Width
-## mmce.test.mean=0.03
+## Features (1): Petal.Width
+## mmce.test.mean=0.04
 ## 
 ## $`iris-example`$classif.lda.featsel[[3]]
 ## FeatSel result:
-## Features (1): Petal.Length
-## mmce.test.mean=0.03
+## Features (1): Petal.Width
+## mmce.test.mean=0.01
 </code></pre>
 
 <pre class="prettyprint well"><code class="r">## Performances on individual test data sets
@@ -612,9 +649,9 @@ getPerformances(res)
 
 <pre class="prettyprint well"><code>## $`iris-example`
 ##   iter classif.rpart.mmce classif.lda.featsel.mmce
-## 1    1               0.10                     0.06
-## 2    2               0.04                     0.02
-## 3    3               0.10                     0.08
+## 1    1               0.06                     0.06
+## 2    2               0.04                     0.04
+## 3    3               0.10                     0.10
 </code></pre>
 
 </div>
