--- a/tutorial/html/resample/index.html
+++ b/tutorial/html/resample/index.html
@@ -271,23 +271,65 @@ rdesc = makeResampleDesc(&quot;CV&quot;, iters = 3)
 r = resample(&quot;surv.coxph&quot;, lung.task, rdesc)
 </code></pre>
 
-<pre class="prettyprint well"><code>## Loading required package: survival
-## Loading required package: splines
-## 
-## Attaching package: 'survival'
-## 
-## The following object is masked from 'package:caret':
-## 
-##     cluster
-</code></pre>
-
-<pre class="prettyprint well"><code>## Error: object 'lung.task' not found
+<pre class="prettyprint well"><code>## [Resample] cross-validation iter: 1
+## [Resample] cross-validation iter: 2
+## [Resample] cross-validation iter: 3
+## [Resample] Result: cindex.test.mean=0.627
 </code></pre>
 
 <pre class="prettyprint well"><code class="r">r
 </code></pre>
 
-<pre class="prettyprint well"><code>## Error: object 'r' not found
+<pre class="prettyprint well"><code>## $measures.train
+##   iter cindex
+## 1    1     NA
+## 2    2     NA
+## 3    3     NA
+## 
+## $measures.test
+##   iter cindex
+## 1    1 0.5783
+## 2    2 0.6324
+## 3    3 0.6706
+## 
+## $aggr
+## cindex.test.mean 
+##           0.6271 
+## 
+## $pred
+## Resampled Prediction for:
+## Resample description: cross-validation with 3 iterations.
+## Predict: test
+## Stratification: FALSE
+## predict.type: response
+## threshold: 
+## time (mean): 0.00
+##    id truth.time truth.event response iter  set
+## 2   1        455        TRUE  -0.4952    1 test
+## 4   2        210        TRUE   0.9574    1 test
+## 7   4        310        TRUE   0.8069    1 test
+## 17 10        613        TRUE   0.1918    1 test
+## 19 12         61        TRUE   0.6639    1 test
+## 22 14         81        TRUE  -0.1874    1 test
+## 
+## $models
+## NULL
+## 
+## $err.msgs
+##   iter train predict
+## 1    1  &lt;NA&gt;    &lt;NA&gt;
+## 2    2  &lt;NA&gt;    &lt;NA&gt;
+## 3    3  &lt;NA&gt;    &lt;NA&gt;
+## 
+## $extract
+## $extract[[1]]
+## NULL
+## 
+## $extract[[2]]
+## NULL
+## 
+## $extract[[3]]
+## NULL
 </code></pre>
 
 <p><code>r$measures.test</code> gives the value of the performance measure on the 3 individual test
@@ -309,7 +351,13 @@ variable.</p>
 <pre class="prettyprint well"><code class="r">head(r$pred$data)
 </code></pre>
 
-<pre class="prettyprint well"><code>## Error: object 'r' not found
+<pre class="prettyprint well"><code>##    id truth.time truth.event response iter  set
+## 2   1        455        TRUE  -0.4952    1 test
+## 4   2        210        TRUE   0.9574    1 test
+## 7   4        310        TRUE   0.8069    1 test
+## 17 10        613        TRUE   0.1918    1 test
+## 19 12         61        TRUE   0.6639    1 test
+## 22 14         81        TRUE  -0.1874    1 test
 </code></pre>
 
 <p>The columns <code>iter</code> and <code>set</code>indicate the resampling iteration and
@@ -334,16 +382,15 @@ rdesc = makeResampleDesc(&quot;Subsample&quot;, iters = 5, split = 4/5)
 r = resample(&quot;cluster.XMeans&quot;, mtcars.task, rdesc, measures = list(dunn, db, timetrain))
 </code></pre>
 
-<pre class="prettyprint well"><code>## Loading required package: RWeka
-</code></pre>
-
-<pre class="prettyprint well"><code>## Error: object 'mtcars.task' not found
+<pre class="prettyprint well"><code>## Error: Assertion on 'measures' failed: May only contain the following
+## types: Measure
 </code></pre>
 
 <pre class="prettyprint well"><code class="r">r$aggr
 </code></pre>
 
-<pre class="prettyprint well"><code>## Error: object 'r' not found
+<pre class="prettyprint well"><code>## cindex.test.mean 
+##           0.6271
 </code></pre>
 
 <h2 id="stratified-resampling">Stratified resampling</h2>
@@ -358,11 +405,10 @@ rdesc = makeResampleDesc(&quot;CV&quot;, iters = 3, stratify = TRUE)
 r = resample(&quot;classif.lda&quot;, iris.task, rdesc)
 </code></pre>
 
-<pre class="prettyprint well"><code>## Loading required package: MASS
-## [Resample] cross-validation iter: 1
+<pre class="prettyprint well"><code>## [Resample] cross-validation iter: 1
 ## [Resample] cross-validation iter: 2
 ## [Resample] cross-validation iter: 3
-## [Resample] Result: mmce.test.mean=0.0267
+## [Resample] Result: mmce.test.mean=0.0197
 </code></pre>
 
 <h2 id="accessing-individual-learner-models">Accessing individual learner models</h2>
@@ -418,29 +464,29 @@ r = resample(&quot;regr.rpart&quot;, bh.task, rdesc,
 <pre class="prettyprint well"><code>## [Resample] cross-validation iter: 1
 ## [Resample] cross-validation iter: 2
 ## [Resample] cross-validation iter: 3
-## [Resample] Result: mse.test.mean=21.9
+## [Resample] Result: mse.test.mean=21.6
 </code></pre>
 
 <pre class="prettyprint well"><code class="r">r$extract
 </code></pre>
 
 <pre class="prettyprint well"><code>## [[1]]
-##   lstat      rm   indus     age    crim      zn     dis     nox     tax 
-## 16307.4 11150.1  6534.7  6237.6  5743.4  4163.7  2567.7  2500.1  1272.5 
-##    chas ptratio     rad 
-##   729.7   687.8   543.4 
+##   lstat      rm     nox     age    crim   indus     tax     dis     rad 
+## 15632.0 11547.1  9089.6  7550.9  7354.8  7125.5  2232.5  2014.4  1283.5 
+## ptratio      zn 
+##  1073.1   117.3 
 ## 
 ## [[2]]
-##   lstat      rm     nox   indus    crim     age     dis     tax ptratio 
-## 17833.2 14287.7 10156.8  9613.6  9012.4  7341.0  3187.8  1190.1  1152.6 
-##       b     rad      zn 
-##   750.7   750.7   365.0 
+##    lstat       rm      nox    indus      dis     crim      age      tax 
+## 18683.64  9153.96  3245.18  3136.51  2956.10  2879.65  2831.96  2576.20 
+##  ptratio       zn      rad        b 
+##  1784.05  1358.84   656.07    50.41 
 ## 
 ## [[3]]
-##       rm    lstat    indus  ptratio      age      nox      tax      dis 
-## 17539.52 11259.90  4233.61  3147.29  2694.09  2603.37  2240.41  1850.52 
-##     crim      rad       zn     chas 
-##  1810.94   688.35   516.81    51.41
+##      rm   lstat   indus     nox     dis     age    crim ptratio     tax 
+## 17652.3 12489.0  4966.9  3488.2  3441.6  3334.1  3207.1  2834.8  2612.6 
+##      zn     rad       b 
+##  1820.9   520.4   307.2
 </code></pre>
 
 <h2 id="resample-descriptions-and-resample-instances">Resample descriptions and resample instances</h2>
@@ -498,13 +544,13 @@ str(rin)
 ##   ..- attr(*, &quot;class&quot;)= chr [1:2] &quot;CVDesc&quot; &quot;ResampleDesc&quot;
 ##  $ size      : int 150
 ##  $ train.inds:List of 3
-##   ..$ : int [1:100] 58 129 60 110 98 131 66 4 121 130 ...
-##   ..$ : int [1:100] 100 129 123 20 84 60 98 131 66 124 ...
-##   ..$ : int [1:100] 58 100 123 20 84 110 4 124 130 111 ...
+##   ..$ : int [1:100] 96 59 55 109 105 144 71 95 4 115 ...
+##   ..$ : int [1:100] 90 74 55 105 71 95 4 54 115 31 ...
+##   ..$ : int [1:100] 96 59 90 74 109 144 54 33 31 77 ...
 ##  $ test.inds :List of 3
-##   ..$ : int [1:50] 5 8 9 12 13 17 19 20 23 25 ...
-##   ..$ : int [1:50] 1 2 3 4 10 11 15 16 21 26 ...
-##   ..$ : int [1:50] 6 7 14 18 22 24 30 33 37 38 ...
+##   ..$ : int [1:50] 1 3 6 8 9 12 14 16 17 23 ...
+##   ..$ : int [1:50] 5 13 15 19 20 22 25 26 27 30 ...
+##   ..$ : int [1:50] 2 4 7 10 11 18 21 28 37 41 ...
 ##  $ group     : Factor w/ 0 levels: 
 ##  - attr(*, &quot;class&quot;)= chr &quot;ResampleInstance&quot;
 </code></pre>
@@ -513,12 +559,12 @@ str(rin)
 rin$train.inds[[3]]
 </code></pre>
 
-<pre class="prettyprint well"><code>##   [1]  58 100 123  20  84 110   4 124 130 111  99  10  54  91  35  83  52
-##  [18] 148  76  27 147  78 104 113  28   3 146  63  71  92  51 107  31  55
-##  [35]  95  48  86 134  45  36 109 144  34  39   5   2  96  25  32  40  26
-##  [52] 127  62  64 128   1  49  41 138  93  16 120  17  81  42  69 145  85
-##  [69]   8  94  44 102  12 108 114 117  82  56  68  61   9  73  77  29  65
-##  [86]  13 150  15 133 103  46  19  11 101  75  50  21 139  23 119
+<pre class="prettyprint well"><code>##   [1]  96  59  90  74 109 144  54  33  31  77  27  45 124 125  89  17  72
+##  [18]  19   3  69  92  46  32  86  57 123 128  22 150 148  40 102  29  88
+##  [35] 143  70 106 133   1  16  15  38  25  80  51  66  53  35 126  81  30
+##  [52]  50  75 130  34 113   8  20  94 118  36 132  82   9  39  78  52  13
+##  [69]   6  26  65  12 101  62  56 120 139 104  83 100 103 149  87  61 146
+##  [86]  24 122 119   5  76  14  63  23 114 145  60  67  79 147 107
 </code></pre>
 
 <p>While having two separate objects, resample descriptions and instances as well as the <a href="http://www.rdocumentation.org/packages/mlr/functions/resample.html">resample</a>
@@ -539,14 +585,14 @@ r.lda$aggr
 </code></pre>
 
 <pre class="prettyprint well"><code>## mmce.test.mean 
-##           0.02
+##        0.02667
 </code></pre>
 
 <pre class="prettyprint well"><code class="r">r.rpart$aggr
 </code></pre>
 
 <pre class="prettyprint well"><code>## mmce.test.mean 
-##        0.07333
+##        0.04667
 </code></pre>
 
 <ul>
@@ -605,14 +651,14 @@ r = resample(&quot;classif.rpart&quot;, iris.task, rdesc, measures = list(mmce, 
 <pre class="prettyprint well"><code>## [Resample] cross-validation iter: 1
 ## [Resample] cross-validation iter: 2
 ## [Resample] cross-validation iter: 3
-## [Resample] Result: mmce.test.mean=0.0667,mmce.test.sd=0.0416
+## [Resample] Result: mmce.test.mean=0.0733,mmce.test.sd=0.0115
 </code></pre>
 
 <pre class="prettyprint well"><code class="r">r$aggr
 </code></pre>
 
 <pre class="prettyprint well"><code>## mmce.test.mean   mmce.test.sd 
-##        0.06667        0.04163
+##        0.07333        0.01155
 </code></pre>
 
 <h3 id="example-calculating-the-training-error">Example: Calculating the training error</h3>
@@ -627,23 +673,23 @@ r = resample(&quot;classif.rpart&quot;, iris.task, rdesc, measures = list(mmce, 
 <pre class="prettyprint well"><code>## [Resample] cross-validation iter: 1
 ## [Resample] cross-validation iter: 2
 ## [Resample] cross-validation iter: 3
-## [Resample] Result: mmce.test.mean=0.0667,mmce.train.mean=0.0367
+## [Resample] Result: mmce.test.mean=0.0533,mmce.train.mean=0.0367
 </code></pre>
 
 <pre class="prettyprint well"><code class="r">r$measures.train
 </code></pre>
 
 <pre class="prettyprint well"><code>##   iter mmce mmce
-## 1    1 0.03 0.03
+## 1    1 0.05 0.05
 ## 2    2 0.03 0.03
-## 3    3 0.05 0.05
+## 3    3 0.03 0.03
 </code></pre>
 
 <pre class="prettyprint well"><code class="r">r$aggr
 </code></pre>
 
 <pre class="prettyprint well"><code>##  mmce.test.mean mmce.train.mean 
-##         0.06667         0.03667
+##         0.05333         0.03667
 </code></pre>
 
 <h3 id="example-bootstrap">Example: Bootstrap</h3>
@@ -679,19 +725,19 @@ head(r$measures.train)
 </code></pre>
 
 <pre class="prettyprint well"><code>##   iter    mmce    mmce    mmce
-## 1    1 0.01333 0.01333 0.01333
-## 2    2 0.04000 0.04000 0.04000
+## 1    1 0.04000 0.04000 0.04000
+## 2    2 0.02667 0.02667 0.02667
 ## 3    3 0.02667 0.02667 0.02667
-## 4    4 0.03333 0.03333 0.03333
+## 4    4 0.04000 0.04000 0.04000
 ## 5    5 0.02667 0.02667 0.02667
-## 6    6 0.02000 0.02000 0.02000
+## 6    6 0.04000 0.04000 0.04000
 </code></pre>
 
 <pre class="prettyprint well"><code class="r">r$aggr
 </code></pre>
 
 <pre class="prettyprint well"><code>## mmce.test.mean      mmce.b632  mmce.b632plus 
-##        0.05029        0.04233        0.04303
+##        0.05029        0.04307        0.04361
 </code></pre>
 
 <h2 id="convenience-functions">Convenience functions</h2>
@@ -720,19 +766,39 @@ These instances are occasionally used in the remainder of this tutorial.</p>
 </thead>
 <tbody>
 <tr>
-<td align="left">bh.rin (mlr.bh)</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/mlr.agri/">agri.rin</a></td>
+<td align="left">European Union Agricultural Workforces clustering task</td>
+</tr>
+<tr>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/mlr.bc/">bc.rin</a></td>
+<td align="left">Wisconsin Breast Cancer classification task</td>
+</tr>
+<tr>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/mlr.bh/">bh.rin</a></td>
 <td align="left">Boston Housing regression task</td>
 </tr>
 <tr>
-<td align="left">iris.rin (mlr.iris)</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/mlr.costIris/">costIris.rin</a></td>
+<td align="left">Iris cost-sensitive classification task</td>
+</tr>
+<tr>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/mlr.iris/">iris.rin</a></td>
 <td align="left">Iris classification task</td>
 </tr>
 <tr>
-<td align="left">sonar.rin (mlr.sonar)</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/mlr.lung/">lung.rin</a></td>
+<td align="left">NCCTG Lung Cancer survival task</td>
+</tr>
+<tr>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/mlr.mtcars/">mtcars.rin</a></td>
+<td align="left">Motor Trend Car Road Tests clustering task</td>
+</tr>
+<tr>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/mlr.sonar/">sonar.rin</a></td>
 <td align="left">Sonar classification task</td>
 </tr>
 <tr>
-<td align="left">wpbc.rin (mlr.wpbc)</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/mlr.wpbc/">wpbc.rin</a></td>
 <td align="left">Wisonsin Prognostic Breast Cancer (WPBC) survival task</td>
 </tr>
 </tbody>
