--- a/tutorial/html/benchmark_experiments/index.html
+++ b/tutorial/html/benchmark_experiments/index.html
@@ -229,7 +229,7 @@
 <p>In a benchmark experiment different learning methods are applied to one or several data sets.
 The aim is usually to compare and rank the algorithms with respect to one or more
 performance measures.</p>
-<p>In <strong>mlr</strong> a benchmark experiment can be conducted by calling the function <a href="http://www.rdocumentation.org/packages/mlr/functions/benchmark.html">benchmark</a> on a
+<p>In <a href="http://www.rdocumentation.org/packages/mlr/">mlr</a> a benchmark experiment can be conducted by calling the function <a href="http://www.rdocumentation.org/packages/mlr/functions/benchmark.html">benchmark</a> on a
 list of <a href="http://www.rdocumentation.org/packages/mlr/functions/makeLearner.html">Learner</a>s and <a href="http://www.rdocumentation.org/packages/mlr/functions/Task.html">Task</a>s.
 Moreover, you can specify which performance measures to calculate and choose a resampling
 strategy for each <a href="http://www.rdocumentation.org/packages/mlr/functions/Task.html">Task</a>.</p>
@@ -265,7 +265,7 @@ set with one <a href="http://www.rdocumentation.org/packages/mlr/functions/makeL
 In the printed table the individual tasks and learners are referred to by their IDs.
 The entries show the 5-fold cross-validated mean misclassification error (<a href="http://www.rdocumentation.org/packages/mlr/functions/mmce.html">mmce</a>), which
 is the default performance measure for classification.</p>
-<p>The result is an object of class <a href="http://www.rdocumentation.org/packages/mlr/functions/BenchmarkResult.html">BenchmarkResult</a> and <strong>mlr</strong> provides several accessor 
+<p>The result is an object of class <a href="http://www.rdocumentation.org/packages/mlr/functions/BenchmarkResult.html">BenchmarkResult</a> and <a href="http://www.rdocumentation.org/packages/mlr/">mlr</a> provides several accessor 
 functions.
 Let's have a look at the benchmark result from the example above:</p>
 <pre class="prettyprint well"><code class="r">## Individual performances of the 5 cross-validation runs
