--- a/tutorial/html/integrated_learners/index.html
+++ b/tutorial/html/integrated_learners/index.html
@@ -230,7 +230,7 @@
             <div class="col-md-9" role="main">
 
 <h1 id="integrated-learners">Integrated Learners</h1>
-<p>Here, the learning methods already integrated into <strong>mlr</strong> are listed.</p>
+<p>Here, the learning methods already integrated into <a href="http://www.rdocumentation.org/packages/mlr/">mlr</a> are listed.</p>
 <p>Columns <strong>Num.</strong>, <strong>Fac.</strong>, <strong>NAs</strong>, and <strong>Weights</strong> indicate if a method can cope with
 numerical and factor predictors, if <code>NA</code>s in the data are allowed and if observation
 weights are supported, respectively.</p>
@@ -277,17 +277,6 @@ vertical-align: top;
 <td align="center">X</td>
 <td align="right">twoclass<br />multiclass<br />prob</td>
 <td align="left"></td>
-</tr>
-<tr>
-<td align="left"><strong>classif.bartMachine</strong> <br />bartmachine</td>
-<td align="left">Bayesian Additive Regression Trees</td>
-<td align="left"><a href="http://www.rdocumentation.org/packages/bartMachine/">bartMachine</a></td>
-<td align="center">X</td>
-<td align="center">X</td>
-<td align="center">X</td>
-<td align="center"></td>
-<td align="right">prob<br />twoclass</td>
-<td align="left">The learner can handle missing values in features, but you need to actively switch that behavior on by setting e.g. 'use_missing_data'. See its doc page for further details.</td>
 </tr>
 <tr>
 <td align="left"><strong>classif.blackboost</strong> <br />blackbst</td>
