--- a/tutorial/html/train/index.html
+++ b/tutorial/html/train/index.html
@@ -225,7 +225,7 @@
 
 <h1 id="training-a-learner">Training a Learner</h1>
 <p>Training a learner means fitting a model to a given data set.
-In the <strong>mlr</strong> package this can be done by calling the function <a href="http://www.rdocumentation.org/packages/mlr/functions/train.html">train</a>
+In the <a href="http://www.rdocumentation.org/packages/mlr/">mlr</a> package this can be done by calling the function <a href="http://www.rdocumentation.org/packages/mlr/functions/train.html">train</a>
 with a <a href="http://www.rdocumentation.org/packages/mlr/functions/makeLearner.html">Learner</a> and a suitable <a href="http://www.rdocumentation.org/packages/mlr/functions/Task.html">Task</a>.</p>
 <p>We start with a survival analysis example and train a
 <a href="http://www.rdocumentation.org/packages/survival/functions/coxph.html">Cox proportional hazards model</a>
@@ -234,19 +234,8 @@ on the <a href="http://www.rdocumentation.org/packages/survival/functions/lung.h
 lung$status = lung$status - 1
 task = makeSurvTask(data = lung, target = c(&quot;time&quot;, &quot;status&quot;))
 lrn = makeLearner(&quot;surv.coxph&quot;)
-</code></pre>
 
-<pre class="prettyprint well"><code>## Loading required package: survival
-## Loading required package: splines
-## 
-## Attaching package: 'survival'
-## 
-## The following object is masked from 'package:caret':
-## 
-##     cluster
-</code></pre>
-
-<pre class="prettyprint well"><code class="r">mod = train(lrn, task)
+mod = train(lrn, task)
 mod
 </code></pre>
 
@@ -276,12 +265,8 @@ Here is a cluster analysis example using the data set <a href="http://www.rdocum
 We create a <a href="http://www.rdocumentation.org/packages/mlr/functions/makeLearner.html">Learner</a> because we want to set one of the hyperparameter values, the number of clusters.</p>
 <pre class="prettyprint well"><code class="r">task = makeClusterTask(data = mtcars)
 lrn = makeLearner(&quot;cluster.SimpleKMeans&quot;, N = 3)
-</code></pre>
 
-<pre class="prettyprint well"><code>## Loading required package: RWeka
-</code></pre>
-
-<pre class="prettyprint well"><code class="r">mod = train(lrn, task)
+mod = train(lrn, task)
 mod
 </code></pre>
 
@@ -295,7 +280,7 @@ mod
 train the learner. This set is passed using the <code>subset</code> argument of <a href="http://www.rdocumentation.org/packages/mlr/functions/train.html">train</a>.</p>
 <p>We fit a simple linear regression model to the <a href="http://www.rdocumentation.org/packages/mlbench/functions/BostonHousing.html">BostonHousing</a> data set.
 The object <a href="&amp;mlr.bh">bh.task</a> is the regression <a href="http://www.rdocumentation.org/packages/mlr/functions/Task.html">Task</a> on the <a href="http://www.rdocumentation.org/packages/mlbench/functions/BostonHousing.html">BostonHousing</a>
-data set provided by <strong>mlr</strong>.</p>
+data set provided by <a href="http://www.rdocumentation.org/packages/mlr/">mlr</a>.</p>
 <pre class="prettyprint well"><code class="r">## Number of observations
 n = bh.task$task.desc$size
 ## Use 1/3 of the observations for training 
@@ -324,29 +309,6 @@ tab = as.numeric(table(tar))
 w = 1/tab[tar]
 
 train(&quot;classif.cforest&quot;, task = bc.task, weights = w)
-</code></pre>
-
-<pre class="prettyprint well"><code>## Loading required package: party
-## Loading required package: grid
-## 
-## Attaching package: 'grid'
-## 
-## The following object is masked from 'package:BBmisc':
-## 
-##     explode
-## 
-## Loading required package: zoo
-## 
-## Attaching package: 'zoo'
-## 
-## The following objects are masked from 'package:base':
-## 
-##     as.Date, as.Date.numeric
-## 
-## Loading required package: sandwich
-## Loading required package: strucchange
-## Loading required package: modeltools
-## Loading required package: stats4
 </code></pre>
 
 <pre class="prettyprint well"><code>## Model for id = classif.cforest class = classif.cforest
